syntax = "proto3";

service Heardbeat {
  rpc GetHeartbeat (GetHeartbeatInput) returns (GetHeartbeatOutput);
}

message GetHeartbeatInput {
  string requesterName = 1;
  string requesterVersion = 2;
}

message GetHeartbeatOutput {
  string responderName = 1;
  string responderVersion = 2;
}
